# blockchain

./: README.md
backend/: CMakeLists.txt  Dockerfile  README.md
backend/api/: server.py
backend/api/scripts/: create_and_update_venv.sh  os.sh  requirements.txt  variables.sh  venv_name.sh
backend/cmake_files/: DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
backend/cppsrc/: CMakeLists.txt  bindings.cpp  block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  sha256.cpp  sha256.hpp  unittest.hpp
backend/simulate_blockchain/: CMakeLists.txt  simulate.cpp
backend/test/: CMakeLists.txt
frontend/: .gitignore  README.md
